# Propaga

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Propaga.sln  README.md  _config.yml  appveyor.yml  azure-pipelines.yml  build.ps1  build.sh  index.md  makefile
.github/workflows/: ccpp.yml  greetings.yml
examples/: fodo.json  solenoid.json  test.initialbunch.ppg
run/: cnaf.sh  postprocess_data.sh  postprocess_data_special.sh  windows.ps1
scripts/: cineca.xl  cnaf.gnu  cnaf.intel  cnaf_bsub_example.sh  postprocess_data.ps1  postprocess_data.sh
src/: Propaga.cpp  Propaga.vcxproj  Propaga.vcxproj.filters  definitions.h  lattice.cpp  lattice.h  magnetic_element.cpp  magnetic_element.h  parameters.cpp  parameters.h  particle.cpp  particle.h  version.h.in
